# cxx-skeleton

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  license  readme.md
.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cmake-multi-platform.yml  doxygen-docs.yml
android-project/app/: build.gradle
android-project/app/src/androidTest/: AndroidManifest.xml
android-project/app/src/androidTest/java/com/egleba/app/: AppActivityTest.java  NativeTestInstrumentation.java
cmake/: cpm-config.cmake
cmake/code_quality/: clang_doc-config.cmake  clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake  doxygen-config.cmake  warnings-config.cmake
cmake/cpm/: doctest-config.cmake  entt-config.cmake  fastgltf-config.cmake  freetype-config.cmake  glm-config.cmake  gsl-config.cmake  imgui-config.cmake  implot-config.cmake  lua_lang-config.cmake  pybind-config.cmake  safetyhook-config.cmake  sdl3-config.cmake  sdl3_mixer-config.cmake  shadercross-config.cmake  spdlog-config.cmake  stb-config.cmake  steam_audio-config.cmake  tinygltf-config.cmake  tinyobjloader-config.cmake  tracy-config.cmake  yaml-cpp-config.cmake
cmake/description/: package.desktop.in  package_description-config.cmake
cmake/toolchains/: llvm_mingw.cmake
docker/: .dockerignore  fedora.Dockerfile  manjaro.Dockerfile  readme.md
docs/: architecture.md  contributing.md  docker.md  platforms.md  presets.md
src/: CMakeLists.txt  main.cpp  sdl_main.cpp  tracy_sandbox.cpp
src/unity_build/: CMakeLists.txt  app.cpp  greet.cpp
tests/: CMakeLists.txt  doctest_example.cpp  junit4_jni.cpp
tools/: pyproject.toml  readme.md  tool.py
