[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake-template-tools"
version = "0.1.0"
description = "CMake template tooling"
requires-python = ">=3.14"
dependencies = ["dearpygui==2.3.0"]

[project.scripts]
tool = "tool:main"

[tool.setuptools]
py-modules = ["tool"]
